Fix contact on mobile
Fix contact entry extra margin on mobile device screens

--- a/src/style.css
+++ b/src/style.css
@@ -423,6 +423,6 @@ body {
     }
     
     .contact-entry {
-        margin: 15px 200px !important;
+        margin: 15px 75px !important;
     }
 }
